Fix spacing again

--- a/code/ui/PlayerCards.scss
+++ b/code/ui/PlayerCards.scss
@@ -6,7 +6,7 @@
     > .left-side {
         position: absolute;
         flex-direction: column;
-        row-gap: 100%;
+        row-gap: 150px;
         bottom: 64px;
         left: 64px;
     }
@@ -14,7 +14,7 @@
     > .right-side {
         position: absolute;
         flex-direction: column;
-        row-gap: 100%;
+        row-gap: 150px;
         bottom: 64px;
         right: 64px;
     }
